   compatibility with existing HDF5 applications that expect the padding
   to stay there.  The previous behaviour (i.e. getting rid of paddings) can
   be replicated by passing the new `allow_padding` parameter when opening
   a file.  For some examples, see the new `examples/tables-with-padding.py`
   and `examples/attrs-with-padding.py`.  For details on the implementation
   see PR #720.
 - Improve compatibility with numpy 1.16.
 - Improve detection of the LZO2 library at build time.
 - Suppress several warnings.


Changes from 3.4.3 to 3.4.4
===========================

Improvements
------------
 - Environment variable to control the use of embedded libraries.
   Thanks to avalentino.
 - Include citation in repository.
   :issue:`690`. Thanks to katrinleinweber.

Bugs fixed
----------
 - Fixed import error with numexpr 2.6.5.dev0
   :issue:`685`. Thanks to cgohlke.
 - Fixed linter warnings.
   Thanks to avalentino.
 - Fixed for re.split() is version detection.
   :issue:`687`. Thanks to mingwandroid.
 - Fixed test failures with Python 2.7 and NumPy 1.14.3
   :issue:`688` & :issue:`689`. Thanks to oleksandr-pavlyk.


Changes from 3.4.2 to 3.4.3
===========================

Improvements
------------
 - On interactive python sessions, group/attribute  `__dir__()` method
   autocompletes children that are named as valid python identifiers.
   :issue:`624` & :issue:`625` thanks to ankostis.
 - Implement `Group.__getitem__()` to have groups act as python-containers,
   so code like this works: ``hfile.root['some child']``.
   :issue:`628` thanks to ankostis.
 - Enable building with Intel compiler (icc/icpc).
   Thanks to rohit-jamuar.
 - PEP 519 support, using new `os.fspath` method.
   Thanks to mruffalo.
 - Optional disable recording of ctime (metadata creation time) when
   creating datasets that makes possible to get bitwise identical output
   from repeated runs.
   Thanks to alex-cobb.
 - Prevent from reading all rows for each coord in a VLArray when